--- a/submission/references.bib
+++ b/submission/references.bib
@@ -408,7 +408,7 @@
 }
 
 @article{Li2009a,
-  title = {Fast and Accurate Short Read Alignment with {{Burrows}}\textendash{{Wheeler}} Transform},
+  title = {Fast and Accurate Short Read Alignment with {{Burrows\textendash Wheeler}} Transform},
   author = {Li, Heng and Durbin, Richard},
   date = {2009-07-15},
   journaltitle = {Bioinformatics},
@@ -700,7 +700,7 @@
 }
 
 @article{Verlaque2003,
-  title = {On the Identity and Origin of the {{Mediterranean}} Invasive {{{\emph{Caulerpa}}}}{\emph{ Racemosa}} ({{Caulerpales}}, {{Chlorophyta}})},
+  title = {On the Identity and Origin of the {{Mediterranean}} Invasive {{{\emph{Caulerpa racemosa}}}} ({{Caulerpales}}, {{Chlorophyta}})},
   author = {Verlaque, Marc and Durand, Christine and Huisman, John M and Boudouresque, Charles-Fran\c{c}ois and Le Parco, Yannick},
   date = {2003-11},
   journaltitle = {Eur. J. Phycol.},
