--- a/submission/references.bib
+++ b/submission/references.bib
@@ -408,7 +408,7 @@
 }
 
 @article{Li2009a,
-  title = {Fast and Accurate Short Read Alignment with {{Burrows\textendash Wheeler}} Transform},
+  title = {Fast and Accurate Short Read Alignment with {{Burrows}}--{{Wheeler}} Transform},
   author = {Li, Heng and Durbin, Richard},
   date = {2009-07-15},
   journaltitle = {Bioinformatics},
