--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -772,6 +772,8 @@ Cluster (LiSC).
 \hypertarget{references}{%
 \subsection{References}\label{references}}
 
+\interlinepenalty=10000 \setlength{\emergencystretch}{3.5em}
+
 \hypertarget{refs}{}
 \leavevmode\hypertarget{ref-Allaire2019}{}%
 Allaire, J.J., Xie, Y., McPherson, J., Luraschi, J., Ushey, K., Atkins,
