--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -1115,7 +1115,7 @@ syntax.
 \setlength\parindent{0pt}
 
 \hypertarget{figure-captions}{%
-\subsection{Figure Captions}\label{figure-captions}}
+\subsection{Figure captions}\label{figure-captions}}
 
 \textbf{\autoref{confocal_december}.} \nameref{confocal_december}
 
