Unit format rendering.

--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -681,14 +681,14 @@ clean tube separating the host leaves or thalli from the mixture
 containing lysed epiphytic cells. Dithiothreitol (DTT; final
 concentration 24 \si{\milli\Molar}) was added and proteins were
 precipitated with chilled 100 \si{\percent} trichloroacetic acid (TCA;
-final concentration 20 \si{\percent}) overnight at \num{-20} °C.
-Precipitated proteins were centrifuged at 10,000 × g and 4
-\si{\degreeCelsius} for 40 \si{\minute}. The obtained protein pellet was
-washed three times with chilled acetone. During the first washing step
-the pellet was transferred to a clean 1.5 \si{\ml} tube. After each
-washing step, samples were centrifuged at 20,000 × g and 4
+final concentration 20 \si{\percent}) overnight at \num{-20}
+\si{\degreeCelsius}. Precipitated proteins were centrifuged at 10,000 ×
+g and 4 \si{\degreeCelsius} for 40 \si{\minute}. The obtained protein
+pellet was washed three times with chilled acetone. During the first
+washing step the pellet was transferred to a clean 1.5 \si{\ml} tube.
+After each washing step, samples were centrifuged at 20,000 × g and 4
 \si{\degreeCelsius} for 5 \si{\minute}. Dried pellets were stored at
-\num{-80} °C until further analysis.
+\num{-80} \si{\degreeCelsius} until further analysis.
 
 \hypertarget{metaproteomics}{%
 \subsubsection{Metaproteomics}\label{metaproteomics}}
