--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -718,10 +718,10 @@ database composed of combined sequenced metagenomes using SEQUEST-HT
 engines and validated with Percolator in Proteome Discoverer 2.1 (Thermo
 Fisher Scientific, USA). The target-decoy approach was used to reduce
 the probability of false peptide identification. Results whose false
-discovery rate at the peptide level was \SI{< 1}{\percent} were kept.
-For protein identification a minimum of two peptides and one unique
-peptide were required. For protein quantification, a chromatographic
-peak area-based free quantitative method was applied.
+discovery rate at the peptide level was \textless{} \SI{1}{\percent}
+were kept. For protein identification a minimum of two peptides and one
+unique peptide were required. For protein quantification, a
+chromatographic peak area-based free quantitative method was applied.
 
 \hypertarget{data-processing-and-visualization}{%
 \subsubsection{Data processing and
