--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -1114,8 +1114,8 @@ syntax.
 \newpage 
 \setlength\parindent{0pt}
 
-\hypertarget{figure-captions}{%
-\subsection{Figure captions}\label{figure-captions}}
+\hypertarget{figure-legends}{%
+\subsection{Figure legends}\label{figure-legends}}
 
 \textbf{\autoref{confocal_december}.} \nameref{confocal_december}
 
