--- a/submission/references.bib
+++ b/submission/references.bib
@@ -2,8 +2,7 @@
 @software{Allaire2019,
   title = {{{rmarkdown}}: Dynamic Documents for {{R}}},
   author = {Allaire, J J and Xie, Yihui and McPherson, Jonathan and Luraschi, Javier and Ushey, Kevin and Atkins, Aron and Wickham, Hadley and Cheng, Joe and Chang, Winston and Iannone, Richard},
-  date = {2019},
-  url = {https://github.com/rstudio/rmarkdown}
+  date = {2019}
 }
 
 @article{Amann1995,
@@ -14,7 +13,6 @@
   volume = {59},
   pages = {143--169},
   issn = {0146-0749},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/7535888 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC239358},
   issue = {1},
   number = {1}
 }
@@ -27,7 +25,6 @@
   volume = {4},
   pages = {171--181},
   doi = {10.1038/ismej.2009.108},
-  url = {http://www.nature.com/articles/ismej2009108},
   issue = {2},
   number = {2}
 }
@@ -41,7 +38,6 @@
   pages = {129--137},
   issn = {0948-3055},
   doi = {10.3354/ame01753},
-  url = {http://www.int-res.com/abstracts/ame/v75/n2/p129-137/},
   issue = {2},
   number = {2}
 }
@@ -49,8 +45,7 @@
 @software{Bengtsson2020,
   title = {{{matrixStats}}: Functions That Apply to Rows and Columns of Matrices (and to Vectors)},
   author = {Bengtsson, Henrik},
-  date = {2020},
-  url = {https://CRAN.R-project.org/package=matrixStats}
+  date = {2020}
 }
 
 @article{Buchfink2015,
@@ -63,8 +58,6 @@
   publisher = {{Nature Publishing Group}},
   issn = {1548-7105},
   doi = {10.1038/nmeth.3176},
-  url = {https://www.nature.com/articles/nmeth.3176},
-  urldate = {2020-07-08},
   issue = {1},
   langid = {english},
   number = {1}
@@ -78,7 +71,6 @@
   volume = {75},
   pages = {252--256},
   doi = {10.1128/AEM.01630-08},
-  url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01630-08},
   issue = {1},
   number = {1}
 }
@@ -92,7 +84,6 @@
   pages = {14288--14293},
   issn = {00278424},
   doi = {10.1073/pnas.1101591108},
-  url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1101591108},
   issue = {34},
   keywords = {Biofilm,Ecological model,Lateral gene transfer},
   number = {34}
@@ -107,7 +98,6 @@
   pages = {590--600},
   issn = {1751-7370},
   doi = {10.1038/ismej.2010.164},
-  url = {http://www.nature.com/articles/ismej2010164 http://www.ncbi.nlm.nih.gov/pubmed/21048801 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3105733},
   issue = {4},
   number = {4}
 }
@@ -120,7 +110,6 @@
   volume = {54},
   pages = {758--761},
   doi = {10.1002/jobm.201300041},
-  url = {http://doi.wiley.com/10.1002/jobm.201300041},
   issue = {7},
   number = {7}
 }
@@ -134,7 +123,6 @@
   pages = {1621--1624},
   issn = {1751-7362},
   doi = {10.1038/ismej.2012.8},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/22402401 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3400413 http://www.nature.com/articles/ismej20128},
   issue = {8},
   number = {8}
 }
@@ -148,7 +136,6 @@
   pages = {6615--6622},
   issn = {1535-3893},
   doi = {10.1021/pr100787q},
-  url = {http://pubs.acs.org/doi/abs/10.1021/pr100787q},
   issue = {12},
   number = {12}
 }
@@ -163,8 +150,6 @@
   pages = {D633-D642},
   issn = {0305-1048},
   doi = {10.1093/nar/gkt1244},
-  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3965039/},
-  urldate = {2020-04-15},
   issue = {Database issue},
   number = {Database issue},
   pmcid = {PMC3965039}
@@ -181,8 +166,6 @@
   publisher = {{Frontiers}},
   issn = {1664-462X},
   doi = {10.3389/fpls.2015.00287},
-  url = {https://www.frontiersin.org/articles/10.3389/fpls.2015.00287/full},
-  urldate = {2020-09-04},
   keywords = {Coenocyte,green algae,morphology,multicellularity,patterning,small RNAs,transcript accumulation},
   langid = {english}
 }
@@ -212,8 +195,6 @@
   publisher = {{Frontiers}},
   issn = {2296-7745},
   doi = {10.3389/fmars.2018.00171},
-  url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00171/full},
-  urldate = {2020-09-11},
   keywords = {Chemolithoautotrophs,Metagenomics,Plant-Microbe Interactions,rhizobiome,seagrass microbiome,sulfur bacteria,symbionts},
   langid = {english}
 }
@@ -226,7 +207,6 @@
   volume = {37},
   pages = {462--476},
   doi = {10.1111/1574-6976.12011},
-  url = {https://academic.oup.com/femsre/article-lookup/doi/10.1111/1574-6976.12011},
   issue = {3},
   number = {3}
 }
@@ -240,7 +220,6 @@
   pages = {3132--3139},
   issn = {14622912},
   doi = {10.1111/j.1462-2920.2009.02017.x},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/19659500 http://doi.wiley.com/10.1111/j.1462-2920.2009.02017.x},
   issue = {12},
   number = {12}
 }
@@ -255,7 +234,6 @@
   publisher = {{Kluwer Academic Publishers}},
   issn = {0018-8158},
   doi = {10.1023/B:HYDR.0000008538.68268.82},
-  url = {http://link.springer.com/10.1023/B:HYDR.0000008538.68268.82},
   issue = {1-3},
   number = {1-3}
 }
@@ -287,8 +265,6 @@
   publisher = {{Oxford Academic}},
   issn = {0305-1048},
   doi = {10.1093/nar/gky1085},
-  url = {https://academic.oup.com/nar/article/47/D1/D309/5173662},
-  urldate = {2020-07-08},
   langid = {english},
   number = {D1},
   options = {useprefix=true}
@@ -302,7 +278,6 @@
   volume = {521},
   pages = {208--212},
   doi = {10.1038/nature14238},
-  url = {http://www.nature.com/articles/nature14238},
   issue = {7551},
   number = {7551}
 }
@@ -317,8 +292,6 @@
   pages = {119},
   issn = {1471-2105},
   doi = {10.1186/1471-2105-11-119},
-  url = {https://doi.org/10.1186/1471-2105-11-119},
-  urldate = {2020-07-08},
   number = {1}
 }
 
@@ -331,7 +304,6 @@
   pages = {1548--56},
   issn = {1573-3017},
   doi = {10.1007/s10646-015-1511-z},
-  url = {http://link.springer.com/10.1007/s10646-015-1511-z http://www.ncbi.nlm.nih.gov/pubmed/26092035},
   issue = {7-8},
   keywords = {Cyanobacteria,Microbial communities,South China Sea,Thalassia hemprichii,Xincun Bay,α-Proteobacteria},
   number = {7-8}
@@ -346,7 +318,6 @@
   pages = {398--408},
   issn = {07232020},
   doi = {10.1016/j.syapm.2016.06.006},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/27475818 http://linkinghub.elsevier.com/retrieve/pii/S0723202016300510},
   issue = {6},
   keywords = {16S amplicon,CARD FISH,Diversity,Estuaries,Gradient,Phytoplankton bloom},
   number = {6}
@@ -360,7 +331,6 @@
   volume = {79},
   pages = {5112--5120},
   doi = {10.1128/AEM.01043-13},
-  url = {http://aem.asm.org/lookup/doi/10.1128/AEM.01043-13},
   issue = {17},
   number = {17}
 }
@@ -385,8 +355,6 @@
   journaltitle = {Cymbella},
   volume = {2},
   pages = {23--32},
-  url = {https://www.researchgate.net/publication/312611101_Complete_chloroplast_genome_for_Caulerpa_racemosa_Bryopsidales_Chlorophyta_and_comparative_analyses_of_siphonous_green_seaweed_plastomes},
-  urldate = {2020-09-09},
   langid = {english},
   number = {2}
 }
@@ -401,8 +369,6 @@
   publisher = {{Taylor \& Francis}},
   issn = {0892-7014},
   doi = {10.1080/08927014.2014.977267},
-  url = {https://doi.org/10.1080/08927014.2014.977267},
-  urldate = {2020-09-11},
   keywords = {biofouling,diatoms,metagenome,metaproteome,quantitative proteomics,ship hull},
   number = {10}
 }
@@ -417,8 +383,6 @@
   publisher = {{Oxford Academic}},
   issn = {1367-4803},
   doi = {10.1093/bioinformatics/btp324},
-  url = {https://academic.oup.com/bioinformatics/article/25/14/1754/225615},
-  urldate = {2020-07-08},
   langid = {english},
   number = {14}
 }
@@ -434,8 +398,6 @@
   publisher = {{Oxford Academic}},
   issn = {1367-4803},
   doi = {10.1093/bioinformatics/btv033},
-  url = {https://academic.oup.com/bioinformatics/article/31/10/1674/177884},
-  urldate = {2020-07-08},
   langid = {english},
   number = {10}
 }
@@ -450,7 +412,6 @@
   publisher = {{Inter-Research}},
   issn = {0948-3055},
   doi = {10.3354/ame048217},
-  url = {http://www.int-res.com/abstracts/ame/v48/n3/p217-229/},
   issue = {3},
   keywords = {Bacterial communities,Diversity,Host organisms,Macroalga,Marine,Sponge},
   number = {3}
@@ -478,7 +439,6 @@
   publisher = {{Public Library of Science}},
   issn = {1932-6203},
   doi = {10.1371/journal.pone.0067480},
-  url = {https://dx.plos.org/10.1371/journal.pone.0067480},
   issue = {6},
   number = {6}
 }
@@ -508,8 +468,6 @@
   publisher = {{Copernicus GmbH}},
   issn = {1726-4170},
   doi = {10.5194/bg-17-3299-2020},
-  url = {https://bg.copernicus.org/articles/17/3299/2020/},
-  urldate = {2020-09-04},
   langid = {english},
   number = {12}
 }
@@ -517,8 +475,7 @@
 @software{Neuwirth2014,
   title = {{{RColorBrewer}}: {{ColorBrewer}} Palettes},
   author = {Neuwirth, Erich},
-  date = {2014},
-  url = {https://cran.r-project.org/package=RColorBrewer}
+  date = {2014}
 }
 
 @article{Noges2010,
@@ -531,7 +488,6 @@
   publisher = {{Springer Netherlands}},
   issn = {1386-2588},
   doi = {10.1007/s10452-009-9249-4},
-  url = {http://link.springer.com/10.1007/s10452-009-9249-4},
   issue = {1},
   number = {1}
 }
@@ -545,7 +501,6 @@
   pages = {1403--1414},
   issn = {14622912},
   doi = {10.1111/1462-2920.13023},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/26271760 http://doi.wiley.com/10.1111/1462-2920.13023},
   issue = {5},
   number = {5}
 }
@@ -559,7 +514,6 @@
   pages = {D590--D596},
   issn = {1362-4962},
   doi = {10.1093/nar/gks1219},
-  url = {http://academic.oup.com/nar/article/41/D1/D590/1069277/The-SILVA-ribosomal-RNA-gene-database-project http://www.ncbi.nlm.nih.gov/pubmed/23193283 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3531112},
   issue = {Database issue},
   number = {Database issue}
 }
@@ -569,7 +523,6 @@
   author = {{R Core Team}},
   date = {2019},
   location = {{Vienna, Austria}},
-  url = {https://www.r-project.org/},
   organization = {{R Foundation for Statistical Computing}}
 }
 
@@ -597,7 +550,6 @@
   publisher = {{Frontiers}},
   issn = {1664-302X},
   doi = {10.3389/fmicb.2016.00773},
-  url = {http://journal.frontiersin.org/Article/10.3389/fmicb.2016.00773/abstract},
   keywords = {endosphere,rhizobiome,rhizoplane,rhizosphere,root microbiome}
 }
 
@@ -611,8 +563,6 @@
   publisher = {{American Chemical Society}},
   issn = {1535-3893},
   doi = {10.1021/acs.jproteome.8b00761},
-  url = {https://doi.org/10.1021/acs.jproteome.8b00761},
-  urldate = {2020-09-11},
   number = {4}
 }
 
@@ -624,7 +574,6 @@
   volume = {75},
   pages = {7537--7541},
   doi = {10.1128/AEM.01541-09},
-  url = {http://aem.asm.org/cgi/doi/10.1128/AEM.01541-09},
   issue = {23},
   number = {23}
 }
@@ -638,7 +587,6 @@
   pages = {e1869},
   issn = {2167-8359},
   doi = {10.7717/peerj.1869},
-  url = {https://peerj.com/articles/1869 http://www.ncbi.nlm.nih.gov/pubmed/27069806 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4824876},
   keywords = {16S rRNA gene sequencing,Bioinformatics,Microbial ecology,Microbiome,Next generation sequencing,PacBio,Sequencing error}
 }
 
@@ -650,7 +598,6 @@
   volume = {7},
   pages = {e00201--16},
   doi = {10.1128/mBio.00201-16},
-  url = {http://mbio.asm.org/lookup/doi/10.1128/mBio.00201-16},
   issue = {3},
   number = {3}
 }
@@ -664,7 +611,6 @@
   pages = {65--77},
   issn = {01686496},
   doi = {10.1111/j.1574-6941.2008.00445.x},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/18328081 https://academic.oup.com/femsec/article-lookup/doi/10.1111/j.1574-6941.2008.00445.x},
   issue = {1},
   number = {1}
 }
@@ -678,7 +624,6 @@
   pages = {993--1003},
   issn = {1432-0614},
   doi = {10.1007/s00253-011-3800-7},
-  url = {http://link.springer.com/10.1007/s00253-011-3800-7 http://www.ncbi.nlm.nih.gov/pubmed/22189863},
   issue = {3},
   number = {3}
 }
@@ -693,7 +638,6 @@
   publisher = {{Wiley/Blackwell (10.1111)}},
   issn = {00223646},
   doi = {10.1111/j.1529-8817.2007.00371.x},
-  url = {http://doi.wiley.com/10.1111/j.1529-8817.2007.00371.x},
   issue = {4},
   keywords = {Cyanobacteria,Diversity,Epiphytes,Nitrogen fixation,Phyllosphere,Seagrass},
   number = {4}
@@ -708,7 +652,6 @@
   pages = {325--339},
   issn = {0967-0262},
   doi = {10.1080/09670260310001612592},
-  url = {http://www.tandfonline.com/doi/abs/10.1080/09670260310001612592},
   issue = {4},
   number = {4}
 }
@@ -740,8 +683,7 @@
 @software{Wilke2018,
   title = {{{cowplot}}: Streamlined Plot Theme and Plot Annotations for 'Ggplot2'},
   author = {Wilke, Claus O.},
-  date = {2018},
-  url = {https://CRAN.R-project.org/package=cowplot}
+  date = {2018}
 }
 
 @article{Williams2012,
@@ -753,7 +695,6 @@
   pages = {1883--1900},
   issn = {1751-7362},
   doi = {10.1038/ismej.2012.28},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/22534610 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3446797 http://www.nature.com/articles/ismej201228},
   issue = {10},
   number = {10}
 }
@@ -767,7 +708,6 @@
   pages = {359--362},
   issn = {1548-7091},
   doi = {10.1038/nmeth.1322},
-  url = {http://www.ncbi.nlm.nih.gov/pubmed/19377485 http://www.nature.com/articles/nmeth.1322},
   issue = {5},
   number = {5}
 }
@@ -780,8 +720,7 @@
   date = {2014},
   pages = {3--32},
   publisher = {{Chapman and Hall/CRC}},
-  location = {{New York}},
-  url = {http://www.crcpress.com/product/isbn/9781466561595}
+  location = {{New York}}
 }
 
 @book{Xie2015,
@@ -790,8 +729,7 @@
   date = {2015},
   edition = {2},
   publisher = {{Chapman and Hall/CRC}},
-  location = {{Boca Raton, Florida}},
-  url = {https://yihui.name/knitr/}
+  location = {{Boca Raton, Florida}}
 }
 
 @book{Xie2018,
@@ -800,8 +738,7 @@
   date = {2018},
   edition = {1st},
   publisher = {{Chapman and Hall/CRC}},
-  location = {{Boca Raton, Florida}},
-  url = {https://bookdown.org/yihui/rmarkdown}
+  location = {{Boca Raton, Florida}}
 }
 
 @article{Xie2019a,
@@ -811,7 +748,6 @@
   journaltitle = {TUGboat},
   volume = {40},
   pages = {30--32},
-  url = {http://tug.org/TUGboat/Contents/contents40-1.html},
   issue = {1},
   number = {1}
 }
@@ -819,8 +755,7 @@
 @software{Xie2020,
   title = {{{tinytex}}: Helper Functions to Install and Maintain '{{TeX Live}}', and Compile '{{LaTeX}}' Documents},
   author = {Xie, Yihui},
-  date = {2020},
-  url = {https://github.com/yihui/tinytex}
+  date = {2020}
 }
 
 @article{Yilmaz2014,
@@ -832,7 +767,6 @@
   pages = {D643--D648},
   issn = {1362-4962},
   doi = {10.1093/nar/gkt1209},
-  url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkt1209 http://www.ncbi.nlm.nih.gov/pubmed/24293649 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3965112},
   issue = {D1},
   number = {D1}
 }
@@ -840,8 +774,7 @@
 @software{Zhu2019,
   title = {{{kableExtra}}: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Zhu, Hao},
-  date = {2019},
-  url = {https://cran.r-project.org/package=kableExtra}
+  date = {2019}
 }
 
 
